--- a/Users/Views/Account/Login.cshtml
+++ b/Users/Views/Account/Login.cshtml
@@ -1,6 +1,8 @@
 ﻿@model LoginModel
+
 <div class="bg-primary m-1 p-1 text-white"><h4>Log In</h4></div>
 <div class="text-danger" asp-validation-summary="All"></div>
+
 <form asp-action="Login" method="post">
     <input type="hidden" name="returnUrl" value="@ViewBag.returnUrl" />
     <div class="form-group">
@@ -12,4 +14,8 @@
         <input asp-for="Password" class="form-control" />
     </div>
     <button class="btn btn-primary" type="submit">Log In</button>
+    <a class="btn btn-info" asp-action="GoogleLogin"
+       asp-route-returnUrl="@ViewBag.returnUrl">
+        Log In With Google
+    </a>
 </form>
